<resources>
    <string name="app_name">Estante do Professor</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>



        <string name="MoreMenu">MoreMenu</string>
        <string name="note">Note</string>
        <string name="DocInfo">DocInfo</string>
        <string name="highlight">Highlight</string>
        <string name="underline">Underline</string>
        <string name="strikeout">StrikeOut</string>
        <string name="squiggly">Squiggly</string>
        <string name="outline">Outline</string>
        <string name="changeLayout">ChangeLayout</string>
        <string name="search">Search</string>
        <string name="annotations">Annotations</string>
        <string name="thumbnail">Thumbnail</string>
    <string name="permission_contacts_rationale">Permissão para gravar são necessárias para visualizar o conteúdo.</string>
    <string name="Ok">OK</string>
    <string name="permission_granted">Permissão concedida</string>
    <string name="permission_not_granted">Permissão concedida</string>
    <string name="permision_available_write">Permissão para escrita concedida. Abrindo estante.</string>



</resources>
